--- a/index.html
+++ b/index.html
@@ -1,17 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <title>Fork Me! FCC: Test Suite Template</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-    <h1>Hello World!  we are software developers </h1>
-    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-
+<body>
+  <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script> -->
-  </body>
+  <nav id="nav-bar">
+    <header>text_description</header>
+    <a href="#header1" class="nav-link">header1</a>
+    <header>text_description</header>
+    <a href="#header2" class="nav-link">header2</a>
+    <header>text_description</header>
+    <a href="#header3" class="nav-link">header3</a>
+    <header>text_description</header>
+    <a href="#header4" class="nav-link">header4</a>
+    <header>text_description</header>
+    <a href="#header5" class="nav-link">header5</a>
+  </nav>
+  <main id="main-doc">
+    <section class="main-section" id="header1">
+        <header>header1</header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et egestas quis ipsum suspendisse.</p>
+        <code></code>
+      </section>
+      <section class=" main-section" id="header2">
+      <header>header2</header>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Et egestas quis ipsum suspendisse.</p>
+        <code></code>
+    </section>
+    <section class="main-section" id="header3">
+      <header>header3</header>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Et egestas quis ipsum suspendisse.</p>
+        <code></code>
+    </section>
+    <section class="main-section" id="header4">
+      <header>header4</header>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Et egestas quis ipsum suspendisse.</p>
+        <code></code>
+    </section>
+    <section class="main-section" id="header5">
+      <header>header5</header>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Et egestas quis ipsum suspendisse.</p>
+        <code></code>
+    </section>
+  </main>
+</body>
+
 </html>
