add some styles

--- a/index.html
+++ b/index.html
@@ -5,88 +5,88 @@
   <meta charset="UTF-8">
   <title>Fork Me! FCC: Test Suite Template</title>
   <link rel="stylesheet" href="css/style.css">
-
-  <style>
-    body {
-      background-color: lightcoral;
-    }
-    
-    @media only screen and (max-width: 600px) { 
-      body {
-        background-color: lightblue;
-      }
-    }
-    </style>
-
-
 </head>
 
 <body>
-  <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <script  src="js/index.js"></script> -->
-  <nav id="nav-bar">
-    <header>text_description</header>
-    <a href="#header1" class="nav-link">header1</a>
-    <header>text_description</header>
-    <a href="#header2" class="nav-link">header2</a>
-    <header>text_description</header>
-    <a href="#header3" class="nav-link">header3</a>
-    <header>text_description</header>
-    <a href="#header4" class="nav-link">header4</a>
-    <header>text_description</header>
-    <a href="#header5" class="nav-link">header5</a>
-  </nav>
-  <main id="main-doc">
-    <section class="main-section" id="header1">
-        <header>header1</header>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et egestas quis ipsum suspendisse.</p>
-        <code></code>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+   <div id="container">
+    <nav id="navbar">
+      <header>text_description</header>
+      <a href="#header1" class="nav-link">header1</a>  
+      <a href="#header2" class="nav-link">header2</a>
+      <a href="#header3" class="nav-link">header3</a>
+      <a href="#header4" class="nav-link">header4</a>
+      <a href="#header5" class="nav-link">header5</a>
+    </nav>
+    <main id="main-doc">
+      <section class="main-section" id="header1">
+          <header>header1</header>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et egestas quis ipsum suspendisse.</p>
+          <p></p>
+          <code></code>
+        </section>
+        <section class=" main-section" id="header2">
+        <header>header2</header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse</p>
+          <p></p>
+          <code></code>
       </section>
-      <section class=" main-section" id="header2">
-      <header>header2</header>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse</p>
-        <code></code>
-    </section>
-    <section class="main-section" id="header3">
-      <header>header3</header>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
-        <code></code>
-    </section>
-    <section class="main-section" id="header4">
-      <header>header4</header>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse </p>
-        <code></code>
-    </section>
-    <section class="main-section" id="header5">
-      <header>header5</header>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Et egestas quis ipsum suspendisse</p>
-        <code></code>
-    </section>
-  </main>
+      <section class="main-section" id="header3">
+        <header>header3</header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
+          <p></p>
+          <code></code>
+      </section>
+      <section class="main-section" id="header4">
+        <header>header4</header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse </p>
+          <p></p>
+          <code></code>
+          <ul>
+            <li>list</li>
+            <li>list</li>
+            <li>list</li>
+          </ul>
+      </section>
+      <section class="main-section" id="header5">
+        <header>header5</header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Et egestas quis ipsum suspendisse</p>
+          <p></p>
+          <code></code>
+          <ul>
+            <li>list</li>
+            <li>list</li>
+            <li>list</li>
+          </ul>
+      </section>
+    </main>
+   </div> 
+  
+  <script  src="js/index.js"></script>
 </body>
 
 </html>
