--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@
 </head>
 
 <body>
-  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-   <div id="container">
+  <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
     <nav id="navbar">
-      <header>text_description</header>
-      <a href="#header1" class="nav-link">header1</a>  
-      <a href="#header2" class="nav-link">header2</a>
-      <a href="#header3" class="nav-link">header3</a>
-      <a href="#header4" class="nav-link">header4</a>
-      <a href="#header5" class="nav-link">header5</a>
+      <header>title_documentation</header>
+      <ul> 
+        <li><a href="#header_1" class="nav-link">header_1</a> </li>
+        <li><a href="#header_2" class="nav-link">header_2</a></li>
+        <li><a href="#header_3" class="nav-link">header_3</a></li>
+        <li><a href="#header_4" class="nav-link">header_4</a></li>
+        <li><a href="#header_5" class="nav-link">header_5</a></li>
+      </ul>
     </nav>
     <main id="main-doc">
-      <section class="main-section" id="header1">
-          <header>header1</header>
+      <section class="main-section" id="header_1">
+          <header>header_1</header>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et egestas quis ipsum suspendisse.</p>
           <p></p>
           <code></code>
         </section>
-        <section class=" main-section" id="header2">
-        <header>header2</header>
+        <section class=" main-section" id="header_2">
+        <header>header_2</header>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Et egestas quis ipsum suspendisse. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -38,8 +39,8 @@
           <p></p>
           <code></code>
       </section>
-      <section class="main-section" id="header3">
-        <header>header3</header>
+      <section class="main-section" id="header_3">
+        <header>header_3</header>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Et egestas quis ipsum suspendisse. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -49,8 +50,8 @@
           <p></p>
           <code></code>
       </section>
-      <section class="main-section" id="header4">
-        <header>header4</header>
+      <section class="main-section" id="header_4">
+        <header>header_4</header>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Et egestas quis ipsum suspendisse. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -67,8 +68,8 @@
             <li>list</li>
           </ul>
       </section>
-      <section class="main-section" id="header5">
-        <header>header5</header>
+      <section class="main-section" id="header_5">
+        <header>header_5</header>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Et egestas quis ipsum suspendisse. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Et egestas quis ipsum suspendisse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -84,9 +85,8 @@
           </ul>
       </section>
     </main>
-   </div> 
   
-  <script  src="js/index.js"></script>
+  <!-- <script  src="js/index.js"></script> -->
 </body>
 
 </html>
